--- a/correo.html
+++ b/correo.html
@@ -32,7 +32,7 @@
             <tr>
               <td style="padding: 0">
                 <img
-                  src="header.png"
+                  src="https://jhon2xq.github.io/posgrado-images/header.png"
                   alt="Header UNSAAC"
                   style="
                     width: 100%;
@@ -235,22 +235,13 @@
                                 margin: 0 auto;
                               "
                             >
-                              <svg
-                                xmlns="http://www.w3.org/2000/svg"
+                              <img
+                                src="https://jhon2xq.github.io/posgrado-images/assets/check.svg"
+                                alt="Check icon"
                                 width="28"
                                 height="28"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                stroke="#cd2046"
-                                stroke-width="2"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
                                 style="display: block"
-                              >
-                                <path
-                                  d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4"
-                                />
-                              </svg>
+                              />
                             </div>
                           </td>
                           <td
@@ -326,22 +317,13 @@
                                 margin: 0 auto;
                               "
                             >
-                              <svg
-                                xmlns="http://www.w3.org/2000/svg"
+                              <img
+                                src="https://jhon2xq.github.io/posgrado-images/assets/clock.svg"
+                                alt="Clock icon"
                                 width="28"
                                 height="28"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                stroke="#cd2046"
-                                stroke-width="2"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
                                 style="display: block"
-                              >
-                                <path
-                                  d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
-                                />
-                              </svg>
+                              />
                             </div>
                           </td>
                           <td
@@ -414,22 +396,13 @@
                                 margin: 0 auto;
                               "
                             >
-                              <svg
-                                xmlns="http://www.w3.org/2000/svg"
+                              <img
+                                src="https://jhon2xq.github.io/posgrado-images/assets/download.svg"
+                                alt="Download icon"
                                 width="28"
                                 height="28"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                stroke="#cd2046"
-                                stroke-width="2"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
                                 style="display: block"
-                              >
-                                <path
-                                  d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9.5a2.5 2.5 0 00-2.5-2.5H15M9 11l3 3m0 0l3-3m-3 3V8"
-                                />
-                              </svg>
+                              />
                             </div>
                           </td>
                           <td
@@ -546,21 +519,12 @@
                                 "
                               >
                                 <!-- icon -->
-                                <svg
-                                  xmlns="http://www.w3.org/2000/svg"
+                                <img
+                                  src="https://jhon2xq.github.io/posgrado-images/assets/bank.svg"
+                                  alt="Bank icon"
                                   width="22"
                                   height="22"
-                                  viewBox="0 0 24 24"
-                                  fill="none"
-                                  stroke="#ffffff"
-                                  stroke-width="2"
-                                  stroke-linecap="round"
-                                  stroke-linejoin="round"
-                                >
-                                  <path
-                                    d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"
-                                  />
-                                </svg>
+                                />
                               </div>
                               <h4
                                 style="
@@ -609,21 +573,12 @@
                                   margin: 0 auto 10px auto;
                                 "
                               >
-                                <svg
-                                  xmlns="http://www.w3.org/2000/svg"
+                                <img
+                                  src="https://jhon2xq.github.io/posgrado-images/assets/mobile.svg"
+                                  alt="Mobile icon"
                                   width="22"
                                   height="22"
-                                  viewBox="0 0 24 24"
-                                  fill="none"
-                                  stroke="#ffffff"
-                                  stroke-width="2"
-                                  stroke-linecap="round"
-                                  stroke-linejoin="round"
-                                >
-                                  <path
-                                    d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"
-                                  />
-                                </svg>
+                                />
                               </div>
                               <h4
                                 style="
@@ -676,21 +631,12 @@
                                   margin: 0 auto 10px auto;
                                 "
                               >
-                                <svg
-                                  xmlns="http://www.w3.org/2000/svg"
+                                <img
+                                  src="https://jhon2xq.github.io/posgrado-images/assets/globe.svg"
+                                  alt="Globe icon"
                                   width="22"
                                   height="22"
-                                  viewBox="0 0 24 24"
-                                  fill="none"
-                                  stroke="#ffffff"
-                                  stroke-width="2"
-                                  stroke-linecap="round"
-                                  stroke-linejoin="round"
-                                >
-                                  <path
-                                    d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9"
-                                  />
-                                </svg>
+                                />
                               </div>
                               <h4
                                 style="
