--- a/correo.html
+++ b/correo.html
@@ -236,7 +236,7 @@
                               "
                             >
                               <img
-                                src="https://jhon2xq.github.io/posgrado-images/assets/check.svg"
+                                src="https://jhon2xq.github.io/posgrado-images/assets/check.png"
                                 alt="Check icon"
                                 width="28"
                                 height="28"
@@ -318,7 +318,7 @@
                               "
                             >
                               <img
-                                src="https://jhon2xq.github.io/posgrado-images/assets/clock.svg"
+                                src="https://jhon2xq.github.io/posgrado-images/assets/clock.png"
                                 alt="Clock icon"
                                 width="28"
                                 height="28"
@@ -397,7 +397,7 @@
                               "
                             >
                               <img
-                                src="https://jhon2xq.github.io/posgrado-images/assets/download.svg"
+                                src="https://jhon2xq.github.io/posgrado-images/assets/download.png"
                                 alt="Download icon"
                                 width="28"
                                 height="28"
@@ -520,7 +520,7 @@
                               >
                                 <!-- icon -->
                                 <img
-                                  src="https://jhon2xq.github.io/posgrado-images/assets/bank.svg"
+                                  src="https://jhon2xq.github.io/posgrado-images/assets/bank.png"
                                   alt="Bank icon"
                                   width="22"
                                   height="22"
@@ -574,7 +574,7 @@
                                 "
                               >
                                 <img
-                                  src="https://jhon2xq.github.io/posgrado-images/assets/mobile.svg"
+                                  src="https://jhon2xq.github.io/posgrado-images/assets/mobile.png"
                                   alt="Mobile icon"
                                   width="22"
                                   height="22"
@@ -632,7 +632,7 @@
                                 "
                               >
                                 <img
-                                  src="https://jhon2xq.github.io/posgrado-images/assets/globe.svg"
+                                  src="https://jhon2xq.github.io/posgrado-images/assets/globe.png"
                                   alt="Globe icon"
                                   width="22"
                                   height="22"
@@ -715,17 +715,17 @@
                         <tr>
                           <td width="30" valign="top" style="padding-top: 4px">
                             <div style="flex: 0 0 28px">
-                              <svg
+                              <png
                                 width="24"
                                 height="24"
                                 viewBox="0 0 20 20"
                                 fill="#991b1b"
-                                xmlns="http://www.w3.org/2000/svg"
+                                xmlns="http://www.w3.org/2000/png"
                               >
                                 <path
                                   d="M10 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16zm-1-11a1 1 0 0 1 2 0v4a1 1 0 1 1-2 0V7zm1 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
                                 />
-                              </svg>
+                              </png>
                             </div>
                           </td>
                           <td>
